# webtoon-crawler

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  scrapy.cfg
webtoon_crawler/: items.py  middlewares.py  pipelines.py  settings.py
webtoon_crawler/tests/utils/: test_logger_config.py
webtoon_crawler/utils/: __init__.py  logger_config.py
