[tool.poetry]
name = "webtoon-crawler"
version = "0.1.0"
description = ""
authors = ["twotwobread <dltndud9137@naver.com>"]
readme = "README.md"
packages = [{include = "webtoon_crawler"}]

[tool.poetry.dependencies]
python = "^3.11"
scrapy = "^2.10.1"
black = "^23.7.0"
pre-commit = "^3.3.3"
ruff = "^0.0.286"
pytest = "^7.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
